--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-axios": "^3.1.3",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
